fixed horizontal overflow

--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -3,16 +3,10 @@ html, body {
     justify-content: center;
     align-items: center;
     height: 100%;
-    min-height: 360px;
-    min-width: 250px;
     width: 100%;
     padding: 0;
     margin: 0;
   }
-
-main{
-    overflow-x: hidden;
-}
 
 span {
     display: inline-block;
@@ -32,20 +26,27 @@ span.closebtn:hover {
     color: white;
 }
 
-nav {
+nav.hidden {
+    display:none;
+}
+
+nav{
     background:#ffffff;
     opacity: 100%;
     z-index: 100;
     position: sticky;
     top: 0px;
     opacity: 0;
+    margin: 0;
+    padding: 0;
 }
 
 nav.header {
-    padding: 20px 0 20px 0;
+    padding: 20px 0;
     width: 100%;
     margin: 0;
 }
+
 
 nav a:hover {
     text-decoration: underline;
@@ -71,9 +72,9 @@ ul.footer-links {
 }
 
 ul.header-links {
-    display: flex;
+    display: inline-flex;
     list-style: none;
-    justify-content: space-between;
+    justify-content: space-around;
     width: 100%;
     margin:0;
     padding:0;
@@ -101,7 +102,6 @@ li.footer-item{
 }
 
 li.header-item {
-    display: inline;
     list-style-type: none;
 }
 
@@ -114,29 +114,28 @@ table{
 
 input{
     font-size: 18px;
-    width: 100%;
-    display:inline-block;
+    width: 70%;
+    display:block;
     height:auto;
     text-align: center;
-    margin: 3% 0;
+    margin: 3% auto;
     padding: 10px 0;
     box-sizing:border-box;
 }
 
 input.submit{
     width:50%;
-    margin-left: 25%;
-    margin-right: 25%;
-    margin-bottom: 10%;
+    margin:3% auto;
+    padding: 10px 0;
 }
 
 select{
-    width:100%;
     height:auto;
+    display: block;
+    width: 70%;
     font-size: 18px;
     text-align: center;
-    margin-top: 3%;
-    margin-bottom: 3%;
+    margin: 3% auto;
     padding: 10px 2px;
     box-sizing:border-box;
 }
@@ -147,9 +146,11 @@ option {
 }
 
 textarea {
+    display:block;
     font-family: 'Edwardian Script';
-    width: 100%;
     height: auto;
+    width: 70%;
+    margin: 0 auto;
     padding: 12px 20px;
     box-sizing: border-box;
     border-radius: 4px;
@@ -194,9 +195,6 @@ button.btn{
     z-index: 1;
     background-color: transparent;
     outline: none;
-    color:#ececec;
-    font-family:'American Typewriter';
-    font-size: 35px;
     padding: 12px 24px;
     border: none;
     width: 60%;
@@ -244,15 +242,12 @@ div {
 
 div.form-container{
     display:block;
-    margin-top: 5%;
-    margin-left: auto;
-    margin-right: auto;
-    width: 70%;
+    width: 100%;
 }
 
 div.head {
     width: 100%;
-    height: 4vh;
+    height: auto;
     position: absolute;
     z-index: 1;
     top: 0;
@@ -395,6 +390,12 @@ a {
     color:#0e0d0d;
 }
 
+a.btn{
+    color:#ececec;
+    font-family:'American Typewriter';
+    font-size: 35px;
+}
+
 a.ext{
     padding: 2% 0;
     width: 100%;
@@ -423,14 +424,12 @@ img.first{
 }
 img.second{
     vertical-align: middle;
-    display: inline-block;
     max-height: auto;
     max-width: 100%;
     padding: 2% 0;
 }
 img.third{
     vertical-align: middle;
-    display: inline-block;
     max-height: auto;
     max-width: 100%;
     padding: 2% 0;
@@ -571,21 +570,27 @@ img.third{
     }
     
     input{
-        width:60%;
-        margin: 1% 0;
+        width: 40%;
+        display:block;
+        margin: 0.5% auto;
     }
     
     input.submit{
-        width:30%;
+        width:10%;
+        display:block;
+        margin: 0.5% auto;
     }
     
     select{
-        width:60%;
-        margin: 1% 0;
+        width: 40%;
+        display:block;
+        margin: 0.5% auto;
     }
     
     textarea {
-        width: 60%;
+        width: 40%;
+        display:block;
+        margin: 0.5% auto;
       }
      
     th {
